Fixed more dark mode issues

--- a/src/components/ExperienceCard/ExperienceCard.module.css
+++ b/src/components/ExperienceCard/ExperienceCard.module.css
@@ -20,7 +20,7 @@
     color: #ffffff;
   }
   .ExperienceCard:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1);
+    box-shadow: 0px 0px 3px 4px #257af9;
     transform: translate(0px, -7px);
   }
   .ListGroupItem {
