--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -27,12 +27,17 @@
   padding-right: 7px;
   text-align: center;
 }
+.accordionHeader {
+  cursor: pointer;
+  border: none;
+  transition: 0.5s;
+}
 @media (prefers-color-scheme: dark) {
   .card {
     background-color: #202020;
   }
   .card:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1);
+    box-shadow: 0px 0px 3px 4px #257af9;
     transform: translate(0px, -7px);
   }
   .accordionCard {
@@ -45,7 +50,7 @@
     outline: none;
   }
   .accordionHeader {
-    color: red;
-    background-color: green;
+    color: white;
+    background-color: #2a2a2a;
   }
 }
